# stochpw

./: .coverage-tmp.html  .stochastic.toml  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  gen_examples.py  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  package-lock.json  pyproject.toml  pyrightconfig.json  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
benchmarks/: RESULTS.md  bench_training.py
code-of-conduct/: index.html
contributing/: index.html
docs/: about.md  code-of-conduct.md  contributing.md  gen_examples.py
docs/examples/: advanced_features.md  basic_usage.md  diagnostics_demo.md  index.md  lalonde_experiment.md  mlp_discriminator.md
examples/: advanced_features.py  basic_usage.py  diagnostics_demo.py  index.html  lalonde_experiment.py  mlp_discriminator.py  nsw_data.csv
examples/advanced_features/: index.html
examples/basic_usage/: index.html
examples/diagnostics_demo/: index.html
examples/lalonde_experiment/: index.html
examples/mlp_discriminator/: index.html
openspec/: project.md
openspec/changes/jit-training-loop/: design.md  proposal.md  tasks.md
openspec/changes/jit-training-loop/specs/training/: spec.md
reference/SUMMARY/: index.html
reference/stochpw/: index.html
reference/stochpw/core/: index.html
reference/stochpw/data/: index.html
reference/stochpw/diagnostics/: index.html
reference/stochpw/diagnostics/advanced/: index.html
reference/stochpw/diagnostics/balance/: index.html
reference/stochpw/diagnostics/weights/: index.html
reference/stochpw/models/: index.html
reference/stochpw/models/base/: index.html
reference/stochpw/models/linear/: index.html
reference/stochpw/models/mlp/: index.html
reference/stochpw/plotting/: index.html
reference/stochpw/training/: index.html
reference/stochpw/training/batch/: index.html
reference/stochpw/training/early_stopping/: index.html
reference/stochpw/training/loop/: index.html
reference/stochpw/training/losses/: index.html
reference/stochpw/training/permutation/: index.html
reference/stochpw/training/regularization/: index.html
reference/stochpw/types/: index.html
reference/stochpw/utils/: index.html
reference/stochpw/weights/: index.html
search/: search_index.json
src/stochpw/: __init__.py  core.py  data.py  models.py  plotting.py  types.py  utils.py  weights.py
src/stochpw/diagnostics/: __init__.py  advanced.py  balance.py
src/stochpw/models/: base.py  linear.py  mlp.py
src/stochpw/training/: __init__.py  batch.py  early_stopping.py  loop.py  losses.py  permutation.py  regularization.py
tests/: conftest.py  test_advanced_features.py  test_core.py  test_data.py  test_diagnostics.py  test_diagnostics_advanced.py  test_models.py  test_plotting.py  test_roc_curve.py  test_stochastic.py  test_training.py  test_utils.py  test_weights.py
