[project]
name = "stochpw"
version = "0.3.0"
description = "Stochastic gradient descent implementation of permutation weighting"
authors = [{ name = "Drew Dimmery", email = "pypi@ddimmery.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "numpyro>=0.15.0,<0.16",
    "jax>=0.4.0,<0.5",
    "jaxlib>=0.4.0,<0.5",
    "numpy>=1.26.0,<2",
    "optax>=0.2.0,<0.3",
    "plotnine>=0.15.0,<0.16",
]

[project.urls]
Homepage = "https://github.com/ddimmery/stochpw"
Repository = "https://github.com/ddimmery/stochpw"

[dependency-groups]
dev = [
    "pytest>=8.3.2,<9",
    "black>=24.8.0,<25",
    "mkdocs>=1.6.0,<2",
    "mkdocstrings>=0.30.0,<0.31",
    "mkdocs-material>=9.5.31,<10",
    "mkdocstrings-python>=1.18.0,<2",
    "mkdocs-autorefs>=1.0.1,<2",
    "mkdocs-section-index>=0.3.9,<0.4",
    "mkdocs-gen-files>=0.5.0,<0.6",
    "mkdocs-literate-nav>=0.6.1,<0.7",
    "pytest-order>=1.2.1,<2",
    "coverage>=7.6.1,<8",
    "mkdocs-coverage>=1.1.0,<2",
    "ruff>=0.5.7,<0.6",
    "pyright>=1.1.406,<2",
    "plotnine>=0.15.0,<0.16",
    "jupytext>=1.17.3,<2",
    "nbconvert>=7.16.6,<8",
    "jupyter>=1.1.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers"
]

[tool.coverage.run]
source = ["src/stochpw"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
