[project]
name = "stochpw"
version = "0.3.0"
description = "Stochastic gradient descent implementation of permutation weighting"
authors = [{ name = "Drew Dimmery", email = "pypi@ddimmery.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "numpyro>=0.15.0",
    "jax>=0.4.38",
    "jaxlib>=0.4.38",
    "numpy>=1.26.0",
    "optax>=0.2.0",
    "plotnine>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/ddimmery/stochpw"
Repository = "https://github.com/ddimmery/stochpw"

[dependency-groups]
dev = [
    "pytest>=8.3.2",
    "black>=24.8.0",
    "mkdocs>=1.6.0",
    "mkdocstrings>=0.30.0",
    "mkdocs-material>=9.5.31",
    "mkdocstrings-python>=1.18.0",
    "mkdocs-autorefs>=1.0.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "pytest-order>=1.2.1",
    "coverage>=7.6.1",
    "mkdocs-coverage>=1.1.0",
    "ruff>=0.5.7",
    "basedpyright>=1.21.0",
    "plotnine>=0.15.0",
    "jupytext>=1.17.3",
    "nbconvert>=7.16.6",
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "W", "F", "C90", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers"
]

[tool.coverage.run]
source = ["src/stochpw"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
